CHANGES IN VERSION 1.17.0
-------------------------

NEW FEATURES

SIGNIFICANT USER-VISIBLE CHANGES

    o rename PileupParam class and constructor -> ApplyPileupsParam

BUG FIXES


CHANGES IN VERSION 1.15.0
-------------------------

NEW FEATURES

    o asSam converts BAM files to SAM files

    o razip, bgzip re-compress directly from .gz files

    o yieldReduce through a BAM or other file, applying a MAP function
      to each chunk and reducing the result to it's final representation

SIGNIFICANT USER-VISIBLE CHANGES

    o bgzip default extension changed to '.bgz'

    o seqinfo,BamFile-method attempts to return seqnames in 'natural'
      order, e.g., chr1, chr2, ...

    o yieldSize now works on BAM files queried with ranges. Successive
      ranges are input until the total number of records first equals
      or exceeds yieldSize..

    o scanFa supports DNA, RNA, and AAStringSet return objects

BUG FIXES

    o scanFa returns correct sequence at the very end of files

    o razip compresses small files

    o applyPileups no longer crashes in the absence of an index file

CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o seqinfo(FaFile) returns available information on sequences and
      lengths on Fa (indexed fasta) files.

    o filterBam accepts FilterRules call-backs for arbitrary
      filtering.

    o add isIncomplete,BamFile-method to test for end-of-file

    o add count.mapped.reads to summarizeOverlaps,*,BamFileList-method;
      set to TRUE to collect read and nucleotide counts via countBam.

    o add summarizeOverlaps,*,character-method to count simple file
      paths

    o add sequenceLayer() and stackStringsFromBam()

    o add 'with.which_label' arg to readGAlignmentsFromBam(),
      readGappedReadsFromBam(), readGAlignmentPairsFromBam(), and
      readGAlignmentsListFromBam()

SIGNIFICANT USER-VISIBLE CHANGES

    o rename:
        readBamGappedAlignments() -> readGAlignmentsFromBam() 